# DataElf-v2

./: .gitignore  README.md  pyproject.toml
dataelf/: cli.py  config.py  schemas.py  workflow.py
dataelf/adapters/: autoresearch.py  deepagents_adapter.py
dataelf/analysis/: trend.py
dataelf/connectors/: ai_index_fixture.py  base.py
dataelf/discovery/: __init__.py  base.py  common_prompt_builder.py  cubepi_insights_explorer.py  cubepi_prompt_builder.py  cubepi_tools.py  deepagents_code_cli_explorer.py  domain_registry.py  insights_explorer.py  prompt_builder.py  quality_review.py  result_parser.py  workflow.py  workspace.py
dataelf/domains/: __init__.py
dataelf/domains/ai_index/: __init__.py  client.py  connector.py  domain.yaml  table_builder.py  tools.py
dataelf/modeling/: ai_index_modeler.py  schema_graph.py
dataelf/report/: renderer.py
dataelf/stores/: raw_cache.py  sqlite_store.py
dataelf/tools/: ai_index_tools.py  registry.py  runtime.py
dataelf/verifier/: evidence_verifier.py
docs/: development_contract.md
fixtures/ai_index/: institutions.json  papers.json  schema_graph.yaml  scholars.json
skills/: ai_index_research.md
tests/: test_cli_smoke.py  test_deepagents_adapter_contract.py  test_discovery_mvp.py  test_evidence_lineage.py  test_trend_analysis.py
