[project]
name = "dataelf"
version = "0.1.0"
description = "DataElf M1 insight discovery runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "langgraph>=1",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dataelf = "dataelf.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dataelf*"]

[tool.setuptools.package-data]
dataelf = ["domains/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
